--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node server.js",
+    "develop": "nodemon server.js"
   },
   "keywords": [],
   "author": "",
@@ -17,6 +19,7 @@
     "express-handlebars": "^7.0.1",
     "express-session": "^1.17.3",
     "mysql2": "^3.2.0",
+    "nodemon": "^2.0.21",
     "sequelize": "^6.29.0"
   }
 }
